# MyOnlineStore-FastAPI-

./: README.md  pyproject.toml
alembic/: env.py
api/: app.py
api/v2024_11_19/auth/: routes.py  schemas.py
api/v2024_11_19/products/: crud.py  dependencies.py  routes.py  schemas.py
core/database/: __init__.py  base.py  db_helper.py  products.py  users.py
settings/: config.py
