[tool.poetry]
name = "online-store-fastapi"
version = "0.1.0"
description = ""
authors = ["paddington22 <pkorolev23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
verselect = "^0.2.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
