[tool.poetry]
name = "online-store-fastapi"
version = "0.1.0"
description = ""
authors = ["paddington22 <pkorolev23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
verselect = "^0.2.0"
uvicorn = "^0.32.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
black = "^24.10.0"
asyncpg = "^0.30.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
